[project]
name = "rkllm-api-server"
version = "0.2.0"
description = "API server for Rockchip NPU (RKLLM) with Vision and Embeddings support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "requests>=2.32.3",
    "rknn-toolkit-lite2>=2.3.0",
    "uvicorn>=0.38.0",
]
